--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -15,7 +15,7 @@
         <div class="col-md-4">
            
           <address>
-             <strong>{{farmerAddressLine}}</strong><br />{{farmerCity}}, {{farmerDistrict}}<br />{{farmerState}},{{farmerPincode}} <br/>
+             <strong>{{farmerAddressLine}}</strong><br />{{farmerCity}} {{farmerDistrict}}<br />{{farmerState}} {{farmerPincode}} <br/>
           </address>
           <h6>
             {{farmerMobileNumber}}
@@ -26,8 +26,14 @@
           <button type="button" class="btn btn-primary">
             Delete Profile
           </button>
+          <address>
+            <strong>{{farmerAlternateAddressLine}}</strong><br />{{farmerAlternateCity}} {{farmerAlternateDistrict}}<br />{{farmerAlternateState}} {{farmerAlternatePincode}} <br/>
+         </address>
+         <h6>
+          {{farmerAlternateNumber}}
+         </h6>
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
         </div>
       </div><br />
       <div class="row">
@@ -46,30 +52,82 @@
                   <br>
                   <br>
                   <p>   </p>
-                  <input type="text" class="form-control" placeholder="Enter Address"> </div>
-                <div class="form-inline"> <label contenteditable="true">City</label>
+                  <input [(ngModel)]="farmerAlternateAddressLine" type="text" class="form-control"
+                   placeholder="Enter Address" name="farmerAlternateAddressLine"> </div>
+                <div class="form-inline"> <label>City</label>
                   <br>
                   <br>
                   <p>        </p>
-                  <input type="text" class="form-control" placeholder="Enter City"> </div>
-                <div class="form-inline"> <label contenteditable="true">District</label>
+                  <input [(ngModel)]="farmerAlternateCity" type="text" class="form-control"
+                   placeholder="Enter City" name="farmerAlternateCity"> </div>
+                <div class="form-inline"> <label>District</label>
                   <br>
                   <br>
                   <p>        </p>
-                  <input type="text" class="form-control" placeholder="Enter District"> </div>
-                <div class="form-inline"> <label contenteditable="true">State</label>
+                  <input [(ngModel)]="farmerAlternateDistrict" type="text" class="form-control" 
+                  placeholder="Enter District" name="farmerAlternateDistrict"> </div>
+                <div class="form-inline"> <label>State</label>
                   <br>
                   <br>
                   <p>         </p>
-                  <input type="text" class="form-control" placeholder="Enter State"> </div>
-                <div class="form-inline"> <label contenteditable="true">Pincode</label>
+                  <input [(ngModel)]="farmerAlternateState" type="text" class="form-control"
+                   placeholder="Enter State" name="farmerAlternateState"> </div>
+                <div class="form-inline"> <label>Pincode</label>
                   <p>        </p>
-                  <input type="number" class="form-control" placeholder="Enter Pincode"> </div>
+                  <input [(ngModel)]="farmerAlternatePincode" type="number" class="form-control"
+                   placeholder="Enter Pincode" name="farmerAlternatePincode"> </div>
                 <br>
-                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="submit"  class="btn btn-primary" (click)="updateFarmerAddress()">Update</button>
               </form>
             </div>
-          </div>
+          </div> -->
+          <div class ="change_password">
+            <button type="submit" class="btn btn-primary change_password_button" data-target="#loginModal" data-toggle="modal">Update Address</button>
+        </div>
+          <div class="modal fade" tabindex="-1" id="loginModal"
+        data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Change Password</h4>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+               
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="inputUserName">Mobile No</label>
+                        <input [(ngModel)]="mobileNumber" class="form-control" placeholder="Enter mobile number"
+                                type="text"  id="inputUserName" name="mobileNumber"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword">Current Password</label>
+                        <input [(ngModel)]="currentPassword" class="form-control" placeholder="Enter current Password"
+                                type="password"  id="inputPassword" name="currentPassword" />
+                    </div>
+                    <div class="form-group">
+                            <label for="inputPassword1">New Password</label>
+                            <input [(ngModel)]="newPassword" class="form-control" placeholder="Enter new Password"
+                                    type="password" id="inputPassword1" name="newPassword" />
+                        </div>
+                        <div class="form-group">
+                                <label for="inputPassword2">Re-enter new Password</label>
+                                <input [(ngModel)]="reenterNewPassword" class="form-control" placeholder="Re-enter New Password"
+                                        type="password" id="inputPassword2" name="reenterNewPassword" />
+                            </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button (click)="onSubmit()" type="submit" class="btn btn-primary">Submit</button>
+                <button  type="button" class="btn btn-primary"
+                        data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+
+
           <br /><br />
           <div class="row">
             <div class="col-md-12 ">
@@ -78,9 +136,10 @@
                 <div class="col-md-6 ">
                   <form class="form-inline">
                     <div class="input-group">
-                      <input type="email" class="form-control" placeholder="Enter Mobile Number">
+                      <input [(ngModel)]="farmerAlternateNumber" type="number" class="form-control"
+                       placeholder="Enter Mobile Number" name="farmerAlternateMobile">
                       <div class="input-group-append">
-                        <button class="btn btn-primary" type="button">Update</button>
+                        <button class="btn btn-primary" type="button" (click)="updateFarmerMobile()">Update</button>
                       </div>
                     </div>
                   </form>
